# plotioda

./: README.md  setup.cfg
.github/workflows/: norms.yaml  tests.yaml
src/plotioda/: __init__.py  configuration.py  utils.py
src/plotioda/io/: __init__.py  iodaio.py
src/plotioda/plots/: __init__.py  plots.py
src/tests/: test_emcpy.py  test_iodaio.py  test_plotioda.py
src/tests/inputs/: amsua_aqua_obs_2018041500.nc4  test_plot.yaml
