[metadata]
name = plotioda 
version = 0.0.1
description = A command line tool to plot IODA files
long_description = file: README.md
long_description_content_type = text/markdown
author = NOAA-EMC
author_email = cory.r.martin@noaa.gov
keywords = NOAA, EMC
home_page = https://github.com/corymartin-noaa/plotioda
license = Apache Software License 
classifiers =
    Development Status :: 1 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License 
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/corymartin-noaa/plotioda/issues
    CI = https://github.com/corymartin-noaa/plotioda/actions

[options]
zip_safe = False
include_package_data = True
package_dir =
  =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  setuptools
scripts =
  src/plotioda/bin/plotioda
install_requires =
  numpy
  scipy
  pandas
  netcdf4
  scikit-learn
  pdoc
  matplotlib
  Cython
  cartopy
  emcpy
tests_require =
  pytest

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md, *.yaml

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
